--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=New+Rocker&display=swap');
 @font-face {
-    font-family: Hk-Grotesk;
-    src: url(../fonts/HKGrotesk-Regular.otf);
+    font-family: Neurial Grotesk;
+    src: url(../fonts/Fontspring-DEMO-neurialgrotesk-regular.otf);
 }
 @font-face {
-    font-family: Binaria;
-    src: url(../fonts/Binaria-Regular.otf);
+    font-family: Maglony;
+    src: url(../fonts/MaglonyFreeVersionRegular-X3PYj.ttf);
 }
 a,
 button,
@@ -22,7 +23,7 @@ button,
 html,
 body {
     font-family: 'Montserrat', sans-serif;
-    background: $white;
+    background: $text-2;
     color: $black;
     max-width: 100vw;
     -ms-overflow-style: none;
