--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,81 +1,106 @@
 // App level styles
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=New+Rocker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=New+Rocker&display=swap");
+// @font-face {
+//   font-family: Neurial Grotesk;
+//   src: url(../fonts/Fontspring-DEMO-neurialgrotesk-regular.otf);
+// }
+// @font-face {
+//   font-family: Neurial Grotesk;
+//   src: url(../fonts/neurial/NeurialGrotesk-Regular.otf);
+// }
+
 @font-face {
-    font-family: Neurial Grotesk;
-    src: url(../fonts/Fontspring-DEMO-neurialgrotesk-regular.otf);
+  font-family: Neurial Grotesk;
+  src: url(../fonts/neurial/NeurialGrotesk-Medium.otf);
 }
+
+// @font-face {
+//   font-family: Neurial Grotesk;
+//   src: url(../fonts/neurial/NeurialGrotesk-Bold.otf);
+// }
+
+// @font-face {
+//   font-family: Neurial Grotesk;
+//   src: url(../fonts/neurial/NeurialGrotesk-Extrabold.otf);
+// }
+
+// @font-face {
+//   font-family: Neurial Grotesk;
+//   src: url(../fonts//neurial/NeurialGrotesk-Extrabold.otf);
+// }
+
 @font-face {
-    font-family: Maglony;
-    src: url(../fonts/MaglonyFreeVersionRegular-X3PYj.ttf);
+  font-family: Maglony;
+  src: url(../fonts/MaglonyFreeVersionRegular-X3PYj.ttf);
 }
 a,
 button,
-[role='button'],
-[role='presentation'] {
-    cursor: pointer;
-    border: none;
-    outline: none;
+[role="button"],
+[role="presentation"] {
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 html,
 body {
-    font-family: 'Montserrat', sans-serif;
-    background: $text-2;
-    color: $black;
-    max-width: 100vw;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-        display: none;
-    }
-    padding: 0;
-    margin: 0;
-    height: 100%;
-    scroll-behavior: smooth;
-    font-size: calc(100vw / 1440 * 16);
-    @include flex(stretch, stretch, column);
-    @include respondMin('desktop2x') {
-        font-size: 1rem;
-    }
-    @include respondMax('tablet2x') {
-        font-size: calc(100vw / 992 * 14);
-    }
-    @include respondMax('tablet') {
-        font-size: calc(100vw / 768 * 14);
-    }
-    @include respondMax("mobile3x") {
-        font-size: calc(100vw / 600 * 14);
-    }
-    @include respondMax("mobile2x") {
-        font-size: calc(100vw / 480 * 14);
-    }
+  font-family: "Neurial Grotesk", sans-serif;
+  background: $text-2;
+  color: $black;
+  max-width: 100vw;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  scroll-behavior: smooth;
+  font-size: calc(100vw / 1440 * 16);
+  @include flex(stretch, stretch, column);
+  @include respondMin("desktop2x") {
+    font-size: 1rem;
+  }
+  @include respondMax("tablet2x") {
+    font-size: calc(100vw / 992 * 14);
+  }
+  @include respondMax("tablet") {
+    font-size: calc(100vw / 768 * 14);
+  }
+  @include respondMax("mobile3x") {
+    font-size: calc(100vw / 600 * 14);
+  }
+  @include respondMax("mobile2x") {
+    font-size: calc(100vw / 480 * 14);
+  }
 }
 
 * {
-    outline: none;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    margin: 0;
-    padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 button {
-    font-size: Max(1.015rem, 14px);
-    line-height: Max(1.5rem, 18px);
-    width: 100%;
-    height: Max(3.125rem, 36px);
-    color: $white;
-    border-radius: 8px;
+  font-size: Max(1.015rem, 14px);
+  line-height: Max(1.5rem, 18px);
+  width: 100%;
+  height: Max(3.125rem, 36px);
+  color: $white;
+  border-radius: 8px;
 }
 
 ul,
@@ -83,41 +108,41 @@ li,
 ol,
 dd,
 dl {
-    margin-inline-start: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-    list-style-type: none;
-    padding-inline-start: 0;
+  margin-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  list-style-type: none;
+  padding-inline-start: 0;
 }
 
 label {
-    display: block;
-    margin-bottom: 0.4rem;
+  display: block;
+  margin-bottom: 0.4rem;
 }
 
 input {
+  border: 1px solid $grey;
+  border-radius: 5px;
+  height: 3.125rem;
+  width: min(90%, 23rem);
+  padding: 0.3rem;
+  &::placeholder {
+    color: $black;
+  }
+  &.login {
     border: 1px solid $grey;
-    border-radius: 5px;
-    height: 3.125rem;
-    width: min(90%, 23rem);
-    padding: 0.3rem;
-    &::placeholder {
-        color: $black;
-    }
-    &.login {
-        border: 1px solid $grey;
     border-radius: 8px;
     height: 3.125rem;
     padding: 0.8rem;
     &::placeholder {
-        color: $black;
+      color: $black;
     }
-    }
-    @include respondMax('mobile3x') {
-        width: 90%;
-    }
+  }
+  @include respondMax("mobile3x") {
+    width: 90%;
+  }
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -134,30 +159,29 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 input[type="checkbox"] {
-    appearance: none;
-    -webkit-appearance: none;
-    width: 15px;
-    height: 15px;
-    border: 1px solid #defbce;
-    background-color: #DBD9D9;
-    cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #defbce;
+  background-color: #dbd9d9;
+  cursor: pointer;
 }
 
 input[type="checkbox"]:after {
-    content: "\f00c";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 10px;
-    color: $white;
-    background-color: #DBD9D9;
-    @include flex(center, center);
+  content: "\f00c";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 10px;
+  color: $white;
+  background-color: #dbd9d9;
+  @include flex(center, center);
 }
 
 input[type="checkbox"]:checked {
-    background-color: #8F3D55;
+  background-color: #8f3d55;
 }
 
 input[type="checkbox"]:checked:after {
-    background-color: #8F3D55;
-    
+  background-color: #8f3d55;
 }
